--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,9 @@
 <section class="cart-show">
 
+<% if enhanced_cart.length == 0%>
+<h2> You're cart is empty! </h2>
+<%= link_to "Click here to shop!", "/"%>
+<% else %>
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
@@ -37,7 +41,7 @@
       <%= form_tag orders_path do %>
         <script
           src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+          data-key= "<%= Rails.configuration.stripe[:publishable_key] %>"
           data-amount="<%= cart_subtotal_cents %>"
           data-name="Jungle"
           data-description="Khurram Virani's Jungle Order"
@@ -48,5 +52,5 @@
       <% end %>
     </div>
   </div>
-
+<%end%>
 </section>
