--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,8 +1,12 @@
 <section class="cart-show">
 
 <% if enhanced_cart.length == 0%>
-<h2> You're cart is empty! </h2>
-<%= link_to "Click here to shop!", "/"%>
+<div class="page-header">
+<div class="alert alert-success" role="alert">
+  OH NO, You're cart is empty!
+</div>
+<%= link_to '<button type="button" class="btn">Click here to shop!</button>'.html_safe, "/" %>
+</div>
 <% else %>
   <header class="page-header">
     <h1>My Cart</h1>
