--- a/app/views/admin/categories/categories.html.erb
+++ b/app/views/admin/categories/categories.html.erb
@@ -1,2 +1,2 @@
-<h1>Admin#categories</h1>
-<p>Find me in app/views/admin/categories.html.erb</p>
+<%# <h1>Admin#categories</h1>
+<p>Find me in app/views/admin/categories.html.erb</p> %>
