--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -5,10 +5,10 @@
   </header>
 
   <div class="well">
-    <%= link_to '+ New Category', [:new, :admin, :category], class: 'btn btn-info' %>
-  </div>
+    <%= link_to '+ New Category', 'categories/new', class: 'btn btn-info' %>
+    </div> 
+
   <div class="panel panel-default products">
-  
     <table class="table table-bordered">
       <thead>
         <tr>
