--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -22,7 +22,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <%# <li class="nav-item dropdown">
+        <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="#"
@@ -30,17 +30,18 @@
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
-          > %>
-            <%# Categories %>
-          <%# </a>
-          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown"> %>
+          >
+            Categories
+           </a>
+          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
             <% Category.all.each do |category| %>
             <li class="nav-item">
               <%= link_to category.name, category, class: "nav-link" %>
             </li>
             <% end %>
-          <%# </ul>
-        </li> %>
+           </ul>
+        </li> 
+        
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
@@ -60,11 +61,20 @@
             <li><%= link_to 'Categories', [:admin, :categories], class: "nav-link" %></li>
           </ul>
         </li>
+         
         <li class="nav-item end-0">
           <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
           My Cart (<%= cart.size %>) <% end %>
         </li>
       </ul>
+       <div class="nav-login">
+        <% if current_user %>
+           Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout', class: "nav-login-link-color" %>
+        <% else %>
+           <%= link_to 'Login', '/login', class: "nav-login-link-color" %> | <%= link_to 'Signup', '/signup', class: "nav-login-link-color" %>
+        <% end %>    
+        </div>
+
     </div>
   </div>
 </nav>
